- Начал писать и описывать POM модели для StellarBurger - написал тесты на регистрацию - написал pom